--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
     	<div id="content" class="w3-container">
         <p>Are your eyes watery or itchy?</p>    <!--This is where I asked my first question -->
+		<a href="#two" class="w3-btn w3-black"> Go to Page Two </a>  <!--This is where I created the yes button for question one -->
     	</div>
 </div>
 
