correctly added "Yes" text into button

--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
     	<div id="content" class="w3-container">
         <p>Are your eyes watery or itchy?</p>    <!--This is where I asked my first question -->
-		<input class="w3-button w3-black" type="button" value="Yes">.  <!--This is where I added the "Yes" text inside the button -->
-		<button class="w3-button w3-black">Button Button</button>
-		<a href="#two" class="w3-btn w3-black"> Go to Page Two </a>  <!--This is where I created the yes button for question one -->
+		<a href="#two" class="w3-btn w3-black"> Yes </a>  <!--This is where I created the yes button for question one -->
     	</div>
 </div>
 
