added second question with yes & no buttons

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p>Content of page 2 goes here.</p>
+		<p>Do you have a fever?</p>    <!--This is where I asked my second question -->
+		<a href="#two" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a>  <!--This is where I created the yes button for question one + I triggered a JavaScript event to increase variable of cold count when yes button is clicked -->
+		<a href="#two" onclick="allergyAdd();"class="w3-btn w3-black"> No </a>  <!--This is where I created the no button for question one + I triggered a JavaScript event to increase variable of allergy count when no button is clicked-->
 	</div>
 </div>	
 
