--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
         function allergyAdd(){
             allergy_count = allergy_count + 1;
-		alert(allergy_count);
+		alert("allergy count is "allergy_count); <!--Changed alert text to show what the count indicated -->
 
         }
 
         function coldAdd(){
             cold_count = cold_count + 1;
+		alert("cold count is "cold_count); <!--Changed alert text to show what the count indicated -->
         }
 
   </script>
