Created page 3 + question 3 + yes&no buttons

--- a/index.html
+++ b/index.html
@@ -110,11 +110,29 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a fever?</p>    <!--This is where I asked my second question -->
-		<a href="#two" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a>  <!--This is where I created the yes button for question one + I triggered a JavaScript event to increase variable of cold count when yes button is clicked -->
-		<a href="#two" onclick="allergyAdd();"class="w3-btn w3-black"> No </a>  <!--This is where I created the no button for question one + I triggered a JavaScript event to increase variable of allergy count when no button is clicked-->
+		<a href="#three" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a>  <!--This is where I created the yes button for question two + I triggered a JavaScript event to increase variable of cold count when yes button is clicked -->
+		<a href="#three" onclick="allergyAdd();"class="w3-btn w3-black"> No </a>  <!--This is where I created the no button for question two + I triggered a JavaScript event to increase variable of allergy count when no button is clicked-->
 	</div>
 </div>	
 
+<div class="page" id="three">                    <!--Created my third page -->
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 3</h1>
+	</div>
+	
+	<div id="content" class="w3-container">
+		<p>Do you have a sore throat?</p>    <!--This is where I asked my third question -->
+		<a href="#two" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a>  <!--This is where I created the yes button for question three + I triggered a JavaScript event to increase variable of cold count when yes button is clicked -->
+		<a href="#two" onclick="allergyAdd();"class="w3-btn w3-black"> No </a>  <!--This is where I created the no button for question three + I triggered a JavaScript event to increase variable of allergy count when no button is clicked-->
+	</div>
+</div>	
+	
+	
+	
+	
+	
+	
+	
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
 </footer>
