--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
         function allergyAdd(){
             allergy_count = allergy_count + 1;
-		alert("allergy count is " + allergy_count); <!-- Changed alert text to show what the count indicated -->
+		alert("allergy count is " + allergy_count); <!-- Changed alert text to show what the count indicated because it was confusing having the alert display a number without showing what the number meant-->
 
         }
 
