--- a/index.html
+++ b/index.html
@@ -117,17 +117,27 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 <div class="page" id="three">                    <!--Created my third page -->
 	<div class="w3-container w3-flat-carrot">
-		<h1>Question 3</h1>
+		<h1>Question 3</h1>           <!--Changed header to show change in question number -->
 	</div>
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a sore throat?</p>    <!--This is where I asked my third question -->
-		<a href="#two" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a>  <!--This is where I created the yes button for question three + I triggered a JavaScript event to increase variable of cold count when yes button is clicked -->
-		<a href="#two" onclick="allergyAdd();"class="w3-btn w3-black"> No </a>  <!--This is where I created the no button for question three + I triggered a JavaScript event to increase variable of allergy count when no button is clicked-->
+		<a href="#four" onclick="coldAdd();"class="w3-btn w3-black"> Yes </a>  <!--This is where I created the yes button for question three + I triggered a JavaScript event to increase variable of cold count when yes button is clicked -->
+		<a href="#four" onclick="allergyAdd();"class="w3-btn w3-black"> No </a>  <!--This is where I created the no button for question three + I triggered a JavaScript event to increase variable of allergy count when no button is clicked-->
 	</div>
 </div>	
 	
+<div class="page" id="four">                    <!--Created my fourth page -->
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 4</h1>          <!--Changed header to show change in question number -->
+	</div>
 	
+	<div id="content" class="w3-container">
+		<p>Are your symptoms seasonal or chronic?</p>    <!--This is where I asked my fourth question -->
+		<a href="#two" onclick="allergyAdd();"class="w3-btn w3-black"> Yes </a>  <!--This is where I created the yes button for question four + I triggered a JavaScript event to increase variable of allergy count when yes button is clicked -->
+		<a href="#two" onclick="coldAdd();"class="w3-btn w3-black"> No </a>  <!--This is where I created the no button for question four + I triggered a JavaScript event to increase variable of cold count when no button is clicked-->
+    	</div>
+</div>	
 	
 	
 	
