--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         var cold_count = 0;
 	var allergyPercent = 0;  <!-- declared and initiated variable -->
 	var coldPercent = 0;     <!-- declared and initiated variable -->
-	var resultText = document.getElementById("results");    <!-- declared and initiated variable -->
+	var resultText = document.getElementById("results1");    <!-- declared and initiated variable -->
         function allergyAdd(){
             allergy_count = allergy_count + 1;
 		alert("allergy count is " + allergy_count); <!-- Changed alert text to show what the count indicated because it was confusing having the alert display a number without showing what the number meant-->
@@ -163,8 +163,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p id="results"></p>           <!--used JavaScript to display percentage results -->
-		document.getElementById("results").innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; 
+		<p id="results1"></p>           <!--used JavaScript to display percentage results -->
+		resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
 
 	</div>
 </div>	
