--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p id="results1"></p>           <!--used JavaScript to display percentage results -->
+		<p id="results1">resultText</p>           <!--used JavaScript to display percentage results -->
 		document.getElementById("result1").innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
 
 	</div>
