--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	function calcResults(){          <!-- created function to calculate result percentages  -->
             (allergyPercent = allergy_count / (allergy_count + cold_count)) * 100;      
 	    (coldPercent = cold_count / (allergy_count + cold_count)) * 100;  
-	     var resultText = document.getElementById("displayResults");    <!-- declared and initiated variable -->
+	     var resultText = document.getElementById("results");    <!-- declared and initiated variable -->
         }
 
   </script>
@@ -150,27 +150,14 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 <div class="page" id="results">                    <!--Created my results page -->
 	<div class="w3-container w3-flat-carrot">
-		<h1>Click Button Below to Display Results</h1>       
-	</div>
-	
-	<div id="content" class="w3-container">
-		<a href="#displayResults" onclick="calcResults();"class="w3-btn w3-black"> Calculate Results </a>  <!--This is where I created the calculate results button that will calculate the final percentages and go to page that displays results -->
-    	</div>
-</div>	
-	
-<div class="page" id="displayResults">                    <!--Created my display results page -->
-	<div class="w3-container w3-flat-carrot">
 		<h1>Results!</h1>       
 	</div>
 	
 	<div id="content" class="w3-container">
-		
-		document.getElementById("result1").innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
-		<p id="results1">resultText</p>           <!--used JavaScript to display percentage results -->
-		
-
-	</div>
-</div>	
+		<a href="#displayResults" onclick="calcResults();"class="w3-btn w3-black"> Calculate Results </a>  <!--This is where I created the calculate results button that will calculate the final percentages and go to page that displays results -->
+		<p id="results">resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; </p>
+    	</div>
+</div>
 	
 	
 	
