fixing display results page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	function calcResults(){          <!-- created function to calculate result percentages  -->
             (allergyPercent = allergy_count / (allergy_count + cold_count)) * 100;      
 	    (coldPercent = cold_count / (allergy_count + cold_count)) * 100;  
-	     var resultText = document.getElementById("results");    <!-- declared and initiated variable -->
+	     var resultText = document.getElementById("displayResults");    <!-- declared and initiated variable -->
         }
 
   </script>
@@ -167,7 +167,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		
 		
-		<p id="results"></p>
+		<p id="displayResults"></p>
 		resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
 		
 		
