fixing display results page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	    (coldPercent = cold_count / (allergy_count + cold_count)) * 100;  
 	     var resultText = document.getElementById("displayResults");    <!-- declared and initiated variable -->
         }
-	<p id="displayResults"></p>
+	<p id=resultText></p>
 
   </script>
 
