--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         }
 	
 	function calcResults(){          <!-- created function to calculate result percentages  -->
-            (allergyPercent = allergy_count / (allergy_count + cold_count)) * 100;      
-	    (coldPercent = cold_count / (allergy_count + cold_count)) * 100;  
+            allergyPercent = (allergy_count / (allergy_count + cold_count)) * 100;      
+	    coldPercent = (cold_count / (allergy_count + cold_count)) * 100;  
 	     var resultText = document.getElementById("displayResults");    <!-- declared and initiated variable -->
-		resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
         }
-	
+	resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
 
   </script>
 
