fixed display results page

--- a/index.html
+++ b/index.html
@@ -56,8 +56,15 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
             allergyPercent = (allergy_count / (allergy_count + cold_count)) * 100;      
 	    coldPercent = (cold_count / (allergy_count + cold_count)) * 100;  
 	     var resultText = document.getElementById("displayResults");    <!-- declared and initiated variable -->
-		resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
+
         }
+	
+	
+	function dispResults(){          <!-- created function to display result percentages  -->
+            resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
+		
+		
+	}
 
   </script>
 
@@ -167,7 +174,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		
-		<p id="displayResults"></p>
+		<p id="dispResults"></p>
 	
 
 		 
