--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		
-		<p id="dispResults"></p>
+		<p id="dispResults();"></p>
 	
 
 		 
