fixed display results page

--- a/index.html
+++ b/index.html
@@ -54,18 +54,19 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	function calcResults(){          <!-- created function to calculate result percentages  -->
             allergyPercent = (allergy_count / (allergy_count + cold_count)) * 100;      
-	    coldPercent = (cold_count / (allergy_count + cold_count)) * 100;  
+	    coldPercent = (cold_count / (allergy_count + cold_count)) * 100;
+		var resultText = document.getElementById("displayResults");    <!-- declared and initiated variable -->
 	     
         }
 	
 	
-	function dispResults(){          <!-- created function to display result percentages  -->
-	    
-	    var resultText = document.getElementById("displayResults");    <!-- declared and initiated variable -->
+	
+	  
+	  
             resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
 		
 		
-	}
+	
 
   </script>
 
@@ -175,7 +176,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		
-		<p id="dispResults();"></p>
+		<p id="resultText;"></p>
 	
 
 		 
