--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 <div class="page" id="displayResults">                    <!--Created my display results page -->
 	<div class="w3-container w3-flat-carrot">
-		<h1>Results</h1>       
+		<h1>Results1</h1>       
 	</div>
 	
 	<div id="content" class="w3-container">
