--- a/index.html
+++ b/index.html
@@ -55,10 +55,17 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	function calcResults(){          <!-- created function to calculate result percentages  -->
             allergyPercent = (allergy_count / (allergy_count + cold_count)) * 100;      
 	    coldPercent = (cold_count / (allergy_count + cold_count)) * 100;
-		var resultText = document.getElementById("displayResults");    <!-- declared and initiated variable -->
 	     
         }
 	
+	function dispResults(){          <!-- created function to display result percentages  -->
+	    
+	    var resultText = document.getElementById("displayResults");    <!-- declared and initiated variable -->
+            resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
+		
+		
+	}
+
 	
 	
 	  
@@ -177,6 +184,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		
 		<p id="resultText;"></p>
+		<p "dispResults();"></p>
 	
 
 		 
