--- a/index.html
+++ b/index.html
@@ -55,16 +55,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	function calcResults(){          <!-- created function to calculate result percentages  -->
             allergyPercent = (allergy_count / (allergy_count + cold_count)) * 100;      
 	    coldPercent = (cold_count / (allergy_count + cold_count)) * 100;
-	     
-        }
-	
-	function dispResults(){          <!-- created function to display result percentages  -->
-	    
 	    var resultText = document.getElementById("displayResults");    <!-- declared and initiated variable -->
             resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
-		
-		
-	}
+        }
 
 	
 	
@@ -167,32 +160,20 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 <div class="page" id="results">                    <!--Created my results page -->
 	<div class="w3-container w3-flat-carrot">
-		<h1>Click the Button Below to Calculate Results</h1>       
+		<h1>Results</h1>       
 	</div>
 	
 	<div id="content" class="w3-container">
+		<p id="results"></p>
 		<a href="#displayResults" onclick="calcResults();"class="w3-btn w3-black"> Calculate Results </a>  <!--This is where I created the calculate results button that will calculate the final percentages & store results in varible and go to page that displays results -->
 	
     	</div>
 </div>
-	
-<div class="page" id="displayResults">                    <!--Created my display results page -->
-	<div class="w3-container w3-flat-carrot">
-		<h1>Results1</h1>       
-	</div>
-	
-	<div id="content" class="w3-container">
-		
-		<p id="resultText;"></p>
-		<p "dispResults();"></p>
+
 	
 
 		 
 		
-		
-		
-    	</div>
-</div>
 	
 	
 	
