--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
  
 Authors in chronological order of contribution:
 Tim Riedel
-Hyuck-Jin Seo   <!-- added my name to authors -->
+Hyuck-Jin Seo
  
 Further Information:
 http://cns.utexas.edu/fri
