fixed comments and attempt to fix missing heading problem in results page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
             allergyPercent = (allergy_count / (allergy_count + cold_count)) * 100;      
 	    coldPercent = (cold_count / (allergy_count + cold_count)) * 100;
 	    var resultText = document.getElementById("resultsPage");    // variable that stores resulting text that displays percentages of allergy and cold
-            resultText.innerHTML = "Probability it is allergies = " + allergyPercent + "%" + "<br> Probability it is a cold = " + coldPercent + "%";       //outputting result
         }
 
   </script>
@@ -156,8 +155,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 
-		<a onclick="calcResults();"class="w3-btn w3-black"> Results </a>  <!--This is where I created the calculate results button that will calculate the final percentages & store results in varibles and go to page that displays results -->
+		<a onclick="calcResults();"class="w3-btn w3-black"> Results </a>  <!--This is where I created the calculate results button that will calculate the final percentages & store results in percentage varibles-->
 	        <p id="results"></p>
+		resultText.innerHTML = "Probability it is allergies = " + allergyPercent + "%" + "<br> Probability it is a cold = " + coldPercent + "%";       <!--outputting result code -->
 		
 		
 		
@@ -167,11 +167,6 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 	
 
-		 
-		
-	
-	
-	
 	
 	
 	
