changed header of results page to be more clear

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 <div class="page" id="resultsPage">                    <!--Created my results page -->
 	<div class="w3-container w3-flat-carrot">
-		<h1>Results</h1>                <!--Changed header to indicate results page -->
+		<h1>Click Button Below to Display Results</h1>                <!--Changed header to show how to display results to avoid confusion on how to display results -->
 	</div>
 	
 	<div id="content" class="w3-container">
