--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 
-		<a onclick="calcResults();"class="w3-btn w3-black"> Results </a>  <!--This is where I created the calculate results button that will calculate the final percentages & store results in percentage varibles-->
+		<a onclick="calcResults();"class="w3-btn w3-black"> Results </a>  <!--This is where I created the calculate results button that will calculate the final percentages & store results in percentage varibles. I also removed href part to stay on the same results page when cicking either button-->
 	        <p id="displayresults"></p>    <!--I fixed the problem where my results would display on a new page without header. I fixed this problem by displaying results on the same page. The error was caused by naming my paragraph id the same as some variables -->
     	</div>
 </div>
