--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
             allergyPercent = (allergy_count / (allergy_count + cold_count)) * 100;      
 	    coldPercent = (cold_count / (allergy_count + cold_count)) * 100;
 	    var resultText = document.getElementById("displayresults");    // variable captures content of paragraph in results page
-            resultText.innerHTML = "Probability it is allergies = " + allergyPercent + "%" + "<br> Probability it is a cold = " + coldPercent + "%";     //outputting actual results by changing resultText from paragraph content to actual results I want displayed
+            resultText.innerHTML = "Probability it is allergies = " + allergyPercent + "%" + "<br> Probability it is a cold = " + coldPercent + "%";     //outputting actual results by changing resultText from paragraph content to actual results I want displayed. This is where I changed HTML content with JavaScript
 	}
 
   </script>
